syntax = "proto3";

package inventory;

option go_package = "internal/proto;proto";

// Существующие сообщения
message Category {
  string id = 1;
  string name = 2;
}

message Product {
  string id = 1;
  string name = 2;
  Category category = 3;
  double price = 4;
  int32 stock = 5;
  string description = 6;
}

message ProductId {
  string id = 1;
}

message StockRequest {
  string product_id = 1;
  int32 requested_quantity = 2;
}

message StockResponse {
  bool available = 1;
  string message = 2;
}

message ProductList {
  repeated Product products = 1;
}

message Empty {}

message SearchRequest {
  string query = 1; // Строка поиска по названию или части названия
  string category_id = 2; // Необязательный фильтр по категории
}

message ProductSearchList {
  repeated Product products = 1;
}

message StockUpdateRequest {
  string product_id = 1;
  int32 quantity = 2; // Количество для изменения
}

service ProductService {
  rpc CreateProduct(Product) returns (Product);
  rpc GetProductByID(ProductId) returns (Product);
  rpc ListProducts(Empty) returns (ProductList);
  rpc UpdateProduct(Product) returns (Product);
  rpc DeleteProduct(ProductId) returns (Empty);
  
  // Новый метод для проверки наличия товара на складе
  rpc CheckStock(StockRequest) returns (StockResponse); 

  // Поиск продуктов по имени или категории
  rpc SearchProducts(SearchRequest) returns (ProductSearchList);

  // Обновление количества товара на складе
  rpc UpdateStock(StockUpdateRequest) returns (StockResponse);
}
